tests/baselines/reference/breakNotInIterationOrSwitchStatement2.errors.txt
==== tests/cases/compiler/breakNotInIterationOrSwitchStatement2.ts (1 errors) ====
    while (true) {
      function f() {
        break;
        ~~~~~~
!!! breakNotInIterationOrSwitchStatement2.ts(3,5): error TS2204: Jump target cannot cross function boundary.
      }
    }